[package]
name = "ralgebra"
description = "Roy's algebra library."
version = "0.1.0"
authors = ["Roy Vegard Ovesen <roy.vegard.ovesen@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ralgebra"
#crate-type = ["lib"]

[dependencies]
