[package]
name = "ralgebra"
description = "Roy's algebra library."
version = "0.1.2"
authors = ["Roy Vegard Ovesen <roy.vegard.ovesen@gmail.com>"]
edition = "2018"
repository = "https://github.com/royvegard/ralgebra"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ralgebra"
#crate-type = ["lib"]

[dependencies]
